--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+
+# Colorschema dark
+color_scheme: dark
+
 # site overview stuff
 title: Semesterarbeit 3 | HF Cloud Native Engineer # After "Semesterarbeit" add the number of the semester, then the Subject and the name of the project
 email: laura.dubach@edu.tbz.ch # Add your email address here, if you want to be contacted by email
@@ -43,7 +47,7 @@ remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
-back_to_top: true
+back_to_top: false
 back_to_top_text: "Back to top"
 
 exclude:
