--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,8 @@ description: >- # this means to ignore newlines until another declaration. Add a
   "Test description" 
 
 # personal stuff
-author: ""
-github_username:  ""
+author: "Laura Dubach"
+github_username:  "lauradubach"
 
 # external stuff
 aux_links:
@@ -41,7 +41,7 @@ aux_links_new_tab: true
 
 # technical site stuff
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-logo: "" # Add your logo here, if you have one. This will be shown in the top left corner of the page.
+logo: "Semesterarbeit3/Pictures/Autorin.jpg" # Add your logo here, if you have one. This will be shown in the top left corner of the page.
 favicon_ico: "" # Add your favicon here, if you have one. This will be shown in the browser tab.
 remote_theme: just-the-docs/just-the-docs
 plugins:
