--- a/_config.yml
+++ b/_config.yml
@@ -1,46 +1,19 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
-
 # Colorschema dark
 color_scheme: dark
 
-# site overview stuff
+# site overview
 title: Semesterarbeit 3 | HF Cloud Native Engineer # After "Semesterarbeit" add the number of the semester, then the Subject and the name of the project
 email: laura.dubach@edu.tbz.ch # Add your email address here, if you want to be contacted by email
 
 description: >- # this means to ignore newlines until another declaration. Add a short description of your project here. This will be shown in the meta tags of the HTML files.
-  "Test description" 
+  "Music Event Finder Microservice" 
 
 # personal stuff
 author: "Laura Dubach"
 github_username:  "lauradubach"
 
-# external stuff
-aux_links:
-  Projektplanung: # Add your Project pannintg link here
-aux_links_new_tab: true
-
-
-# technical site stuff
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# technical site
+url: "https://github.com/lauradubach/Semesterarbeit3/tree/main" # the base hostname & protocol for your site, e.g. http://example.com
 logo: "Semesterarbeit3/Pictures/Autorin.jpg" # Add your logo here, if you have one. This will be shown in the top left corner of the page.
 favicon_ico: "" # Add your favicon here, if you have one. This will be shown in the browser tab.
 remote_theme: just-the-docs/just-the-docs
@@ -56,24 +29,3 @@ exclude:
   - ressources/notizen/
   - documentation/Hauptteil/Notizen_aufbau.md
   - ressources/scripts/Logininfos.json
-  
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
